# ros_ws

./: .gitignore  README.md  odin1_map_save.py  output.yaml  上中央高地.csv  从中央高地回家.csv  前哨站.csv  回家.csv  回家1.csv  自己半场巡逻.csv
csv/: 中央高地巡逻.csv  到目的地.csv  回家.csv  巡逻.csv  (+1 more)
src/cloud_rgb_to_intensity/: CMakeLists.txt  package.xml
src/cloud_rgb_to_intensity/launch/: cloud_rgb_to_intensity.launch.py
src/cloud_rgb_to_intensity/src/: cloud_rgb_to_intensity.cpp
src/dynamic_spatio_temporal_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
src/dynamic_spatio_temporal_layer/cfg/: default_params.yaml
src/dynamic_spatio_temporal_layer/include/dynamic_spatio_temporal_layer/: dynamic_spatio_temporal_layer.hpp
src/dynamic_spatio_temporal_layer/src/: dynamic_spatio_temporal_layer.cpp
src/enemy_forbidden_area_detector/: CMakeLists.txt  bt_plugins.xml  package.xml
src/enemy_forbidden_area_detector/config/: enemy_forbidden_area_detector.yaml
src/enemy_forbidden_area_detector/include/enemy_forbidden_area_detector/: enemy_forbidden_area_detector.hpp  geometry_utils.hpp  marker_utils.hpp
src/enemy_forbidden_area_detector/launch/: enemy_forbidden_area_detector.launch.py
src/enemy_forbidden_area_detector/src/: bt_enemy_in_forbidden_area.cpp  enemy_forbidden_area_detector.cpp  enemy_forbidden_area_detector_node.cpp  geometry_utils.cpp  marker_utils.cpp
src/map_edit/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
src/map_edit/include/map_edit/: map_edit_panel.h  map_eraser_tool.h  tool_manager.h
src/map_edit/launch/: mapeidt.launch.py
src/map_edit/rviz/: default.rviz
src/map_edit/src/: map_edit_panel.cpp  map_eraser_tool.cpp  tool_manager.cpp
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/: .pre-commit-config.yaml  CMakeLists.txt  package.xml
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/include/pb_omni_pid_pursuit_controller/: cbf_safety_layer.hpp  fuzzy_controller.hpp  fuzzy_pid.hpp  omni_pid_pursuit_controller.hpp  trajectory.hpp
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/src/: cbf_safety_layer.cpp  fuzzy_controller.cpp  fuzzy_pid.cpp  omni_pid_pursuit_controller.cpp
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/src/critics/: goal_angle_critic.cpp  obstacle_critic.cpp  path_align_critic.cpp  prefer_forward_critic.cpp
src/polygon_manager/: CHECKLIST.md  CMakeLists.txt  DELIVERY_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  package.xml  polygon_edit_plugin.xml
src/polygon_manager/config/: areas.yaml  polygon_manager.rviz
src/polygon_manager/include/polygon_manager/: geometry_utils.hpp  marker_utils.hpp  polygon_area.hpp  polygon_edit_panel.hpp  polygon_manager.hpp
src/polygon_manager/launch/: polygon_manager.launch.py  test_demo.py
src/polygon_manager/src/: bt_enemy_in_area.cpp  geometry_utils.cpp  marker_utils.cpp  polygon_edit_panel.cpp  polygon_manager.cpp  polygon_node.cpp
src/rm_decision/rm_behavior_tree/: CMakeLists.txt  package.xml
src/rm_decision/rm_behavior_tree/config/: Project.btproj  RMUL2026.xml  RMUL2026_fang.xml  RMUL2026_fang_车.xml  RMUL2026车.xml  armor_to_goal_example.xml  attack.xml  attack_left.xml  attack_robot.xml  attack_robot_enhanced.xml  attack_robot_improved.xml  attack_robot_improved_simple.xml  attack_robot_improved_v2.xml  bag_recorder_example.xml  complete_test.xml  demo_multi_nav.xml  demo_patrol_loop.xml  demo_single_nav.xml  enemy_position_filter_example.xml  follow.xml  hysteresis_example.xml  liu.xml  map.xml  map1.xml  map_processor.yaml  navigate_to_pose_w_replanning_and_recovery.xml  navigation_with_stall_recovery.xml  observation.xml  observation_enhanced.xml  observation_interrupt.xml  patrol_navigate_through_poses.xml  patrol_with_handshake.xml  rmuc.xml  rmul2025_01.xml  robot_control.xml  robot_posture.xml  sentry_utility_ai_example.xml  set_posture.xml  stuck_detection_example.xml  test.xml  (+10 more)
src/rm_decision/rm_behavior_tree/include/rm_behavior_tree/: BehaviorTreeManager.hpp  bt_conversions.hpp  map_processor_node.hpp  rm_behavior_tree.hpp
src/rm_decision/rm_behavior_tree/launch/: map_processor_launch.py  rm_behavior_tree_birngup.launch.py
src/rm_decision/rm_behavior_tree/src/: map_processor_node.cpp  rm_behavior_tree.cpp  rm_behavior_tree_me.cpp
src/rm_decision/rm_decision_interfaces/: CMakeLists.txt  package.xml
src/rm_decision/rm_decision_interfaces/msg/: AllRobotHP.msg  Controller.msg  EnemyForbiddenArea.msg  EnemyLocation.msg  FriendLocation.msg  GameStatus.msg  GoalStatus.msg  ObservationPoint.msg  ObservationPoints.msg  RFID.msg  RFIDParse.msg  RobotControl.msg  RobotEconomy.msg  RobotLocation.msg  RobotStatus.msg  SelfRobotHP.msg  SentryDecision.msg  SentryPostureCmd.msg  SentryPostureStatus.msg  Target.msg
src/rm_decision/rm_decision_interfaces/srv/: SetSentryPosture.srv
src/rm_decision/srpp_interfaces/: CMakeLists.txt  package.xml
src/rm_decision/srpp_interfaces/msg/: GimbalCmd.msg  GimbalPosition.msg  GimbalVelocity.msg  Referee.msg  RobotStateInfo.msg
src/rm_keepout_costmap_layer/: CMakeLists.txt  README.md  package.xml  polygon_keepout_layer.xml
src/rm_keepout_costmap_layer/config/: areas.yaml
src/rm_keepout_costmap_layer/include/rm_keepout_costmap_layer/: polygon_keepout_layer.hpp
src/rm_keepout_costmap_layer/src/: polygon_keepout_layer.cpp
src/rm_sentry_decision/: CMakeLists.txt  package.xml
src/rm_sentry_decision/config/: utility_ai.yaml
src/rm_sentry_decision/launch/: utility_ai.launch.py
src/rm_sentry_decision/src/: utility_ai_node.cpp
src/rm_set_posture/: CMakeLists.txt  package.xml
src/rm_set_posture/config/: set_posture.yaml
src/rm_set_posture/include/rm_set_posture/: set_posture_node.hpp
src/rm_set_posture/launch/: set_posture.launch.py
src/rm_set_posture/src/: set_posture_node.cpp  standalone.cpp
src/robot_area_detector/: CMakeLists.txt  package.xml
src/robot_area_detector/config/: robot_area_detector.yaml
src/robot_area_detector/launch/: robot_area_detector.launch.py
src/robot_area_detector/msg/: RobotAreaStatus.msg
src/robot_area_detector/src/: robot_area_detector_node.cpp
(+251 files in other folders)
