<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enemy_forbidden_area_detector</name>
  <version>1.0.0</version>
  <description>检测敌人是否进入 forbidden 禁区 - 支持 SLAM/离线地图、连续检测滤波、BT 插件</description>

  <maintainer email="2398772523@qq.com">lu RoboMaster Team</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>behaviortree_ros2</build_depend>
  <build_depend>armor_interfaces</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 运行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>behaviortree_ros2</exec_depend>
  <exec_depend>armor_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 自定义消息所属组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
